A lot of new stuff & ui recolor

--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -6,9 +6,13 @@ $adagio-gray: #282931;
 }
 
 .logo {
-  align-self: center;
-  height: 25px;
-  width: 25px;
+  height: 100%;
+  width: 30px;
+  margin-right: 0.5em;
+}
+
+.title {
+  font-size: 1.5rem;
 }
 
 .navbar-collapse {
@@ -16,16 +20,16 @@ $adagio-gray: #282931;
 }
 
 .navbar-nav {
-  padding-top: unset;
-  padding-bottom: unset;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 .nav-link {
-  padding-right: unset;
+  padding-right: 0;
 }
 
 .avatar {
-  line-height: unset;
+  line-height: 0;
   border-radius: 10%;
   height: 16px;
   width: 16px;
