--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,13 +1,13 @@
 <div class="page-content content">
   <nav class="navbar fixed-top navbar-expand-lg">
-    <img src="../assets/adagio-logo.png" class="logo" alt="">
-    <div style="color:#a0a0a0;">Versión Alpha 0.0.7</div>
+    <img src="../assets/Adagio.png" class="logo" alt="">
+    <div style="color:#a0a0a0;" class="title">Alpha 3</div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <i class="fas fa-bars menu"></i>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav flex-row">
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
           <a class="nav-link" href="/"><i class="fas fa-bars"></i> Inicio</a>
         </li>
@@ -24,7 +24,7 @@
           <a class="nav-link" href="/classrooms"><i class="fas fa-chalkboard-teacher"></i> Aulas</a>
         </li>
       </ul>
-      <ul class="navbar-nav flex-row ml-md-auto" style="line-height: 0;">
+      <ul class="navbar-nav flex-row mt-2 mt-lg-0" style="line-height: 0;">
           <li *ngIf="!identity" class="nav-item">
             <a class="nav-link" href="/login"><i class="fas fa-sign-in-alt"></i> Inicia sesión</a>
           </li>
