--- a/client/src/app/components/discover/discover.component.html
+++ b/client/src/app/components/discover/discover.component.html
@@ -2,20 +2,28 @@
   <div class="row justify-content-md-center">
     <div *ngIf="publications" class="col-lg-8 content">
       <div *ngFor="let publication of publications" class="card publication">
-        <img *ngIf="publication.media_file" class="card-img-top media" src="{{ url +'get-media/' + publication.media_file }}">
+        <div *ngIf="publication.type" class="card-header"><i class="fas fa-megaphone"></i> Comunicado</div>
         <div class="card-body">
-          <img class="avatar" src="{{ url +'get-user-avatar/' + publication.user_id.avatar }}" *ngIf="publication.user_id.avatar">
+          <img class="avatar" src="{{ url +'get-user-avatar/' + publication.user_id.avatar }}"
+            *ngIf="publication.user_id.avatar">
           <div class="publication-header">
             <h6 class="names">
               <a href="{{ '/profile/' + publication.user_id._id }}">{{publication.user_id.names}}</a>
-              <small class="date"> {{ (publication.created_at | amFromUnix) | amLocale:'es_mx' | amTimeAgo }}</small><br>
+              <small class="date">
+                {{ (publication.created_at | amFromUnix) | amLocale:'es_mx' | amTimeAgo }}</small><br>
               <small class="nick"> @{{publication.user_id.unique_nick}}</small>
             </h6>
           </div>
           <p class="card-text">{{publication.text}}</p>
-          <button class="btn btn-sm" (click)="saveLike()"><i class="fas fa-chevron-up"></i><span *ngIf="publication.likes > 0"> {{publication.likes}}</span></button>
-          <button class="btn btn-sm" (click)="openComments()"><i class="fas fa-comment-alt"></i></button>
-          <button class="btn btn-sm disabled" (click)="sharePublication()"><i class="fas fa-share"></i></button>
+          <img *ngIf="publication.media_file" class="card-img-bottom media"
+            src="{{ url +'get-media/' + publication.media_file }}">
+          <div class="publication-buttons">
+            <button class="btn btn-sm" (click)="saveLike()"><i class="fas fa-chevron-up"></i><span
+                *ngIf="publication.likes > 0">
+                {{publication.likes}}</span></button>
+            <button class="btn btn-sm" (click)="openComments()"><i class="fas fa-comment-alt"></i></button>
+            <button class="btn btn-sm disabled" (click)="sharePublication()"><i class="fas fa-share"></i></button>
+          </div>
         </div>
       </div>
       <div class="col-lg-12 text-center content" *ngIf="publications && publications.length && pages > 1">
