--- a/client/src/app/components/publications/publications.component.html
+++ b/client/src/app/components/publications/publications.component.html
@@ -2,17 +2,22 @@
   <div class="row justify-content-md-center">
     <div class="card form col-lg-8 content">
       <form #publicationForm="ngForm" (ngSubmit)="onSubmit(publicationForm)" *ngIf="identity" class="form-group">
-        <textarea name="text_field" #text_field="ngModel" [(ngModel)]="publication.text" class="form-control" name="text_field" rows="4"></textarea>
-        <button type="submit" [disabled]="!publicationForm.form.valid" class="btn-form btn adagio-gray">Publicar</button>
+        <textarea name="text_field" #text_field="ngModel" [(ngModel)]="publication.text" class="form-control"
+          name="text_field" rows="4"></textarea>
+        <button type="submit" [disabled]="!publicationForm.form.valid"
+          class="btn-form btn adagio-gray">Publicar</button>
         <label for="file-upload-media" class="custom-file-upload btn-form btn btn-file">
           <i class="fas fa-camera"></i><i *ngIf="publication.media_file" class="fas fa-check"></i>
         </label>
-        <input name="media_file" #media_file="ngModel" [(ngModel)]="publication.media_file" id="file-upload-media" type="file" accept=".png, .jpg, .jpeg"/>
+        <input name="media_file" #media_file="ngModel" [(ngModel)]="publication.media_file" id="file-upload-media"
+          type="file" accept=".png, .jpg, .jpeg" />
         <label for="file-upload-document" class="custom-file-upload btn-form btn btn-file">
           <i class="fas fa-file-pdf"></i><i *ngIf="publication.document_file" class="fas fa-check"></i>
         </label>
-        <input name="document_field" #document_field="ngModel" [(ngModel)]="publication.document_file" id="file-upload-document" type="file" accept=".pdf, .docx, .doc"/>
-        <select name="type" #type="ngModel" [(ngModel)]="publication.type" *ngIf="identity.role === 'administrator'" class="custom-select form-group form-control-sm">
+        <input name="document_field" #document_field="ngModel" [(ngModel)]="publication.document_file"
+          id="file-upload-document" type="file" accept=".pdf, .docx, .doc" />
+        <select name="type" #type="ngModel" [(ngModel)]="publication.type" *ngIf="identity.role === 'administrator'"
+          class="custom-select form-group form-control-sm">
           <option value="default" selected>Publicación normal</option>
           <option value="aviso">Aviso</option>
           <option value="convocatoria">Convocatoria</option>
@@ -22,20 +27,28 @@
     </div>
     <div *ngIf="publications" class="col-lg-8 content">
       <div *ngFor="let publication of publications" class="card publication">
-        <img *ngIf="publication.media_file" class="card-img-top media" src="{{ url +'get-media/' + publication.media_file }}">
+        <div *ngIf="publication.type" class="card-header"><i class="fas fa-megaphone"></i> Comunicado</div>
         <div class="card-body">
-          <img class="avatar" src="{{ url +'get-user-avatar/' + publication.user_id.avatar }}" *ngIf="publication.user_id.avatar">
+          <img class="avatar" src="{{ url +'get-user-avatar/' + publication.user_id.avatar }}"
+            *ngIf="publication.user_id.avatar">
           <div class="publication-header">
             <h6 class="names">
               <a href="{{ '/profile/' + publication.user_id._id }}">{{publication.user_id.names}}</a>
-              <small class="date"> {{ (publication.created_at | amFromUnix) | amLocale:'es_mx' | amTimeAgo }}</small><br>
+              <small class="date">
+                {{ (publication.created_at | amFromUnix) | amLocale:'es_mx' | amTimeAgo }}</small><br>
               <small class="nick"> @{{publication.user_id.unique_nick}}</small>
             </h6>
           </div>
           <p class="card-text">{{publication.text}}</p>
-          <button class="btn btn-sm" (click)="saveLike()"><i class="fas fa-chevron-up"></i><span *ngIf="publication.likes > 0"> {{publication.likes}}</span></button>
-          <button class="btn btn-sm" (click)="openComments()"><i class="fas fa-comment-alt"></i></button>
-          <button class="btn btn-sm disabled" (click)="sharePublication()"><i class="fas fa-share"></i></button>
+          <img *ngIf="publication.media_file" class="card-img-bottom media img-fluid"
+            src="{{ url +'get-media/' + publication.media_file }}">
+          <div class="publication-buttons">
+            <button class="btn btn-sm" (click)="saveLike()"><i class="fas fa-chevron-up"></i><span
+                *ngIf="publication.likes > 0">
+                {{publication.likes}}</span></button>
+            <button class="btn btn-sm" (click)="openComments()"><i class="fas fa-comment-alt"></i></button>
+            <button class="btn btn-sm disabled" (click)="sharePublication()"><i class="fas fa-share"></i></button>
+          </div>
         </div>
       </div>
       <div class="col-lg-12 text-center content" *ngIf="publications && publications.length && pages > 1">
