--- a/client/src/app/components/register/register.component.html
+++ b/client/src/app/components/register/register.component.html
@@ -15,32 +15,34 @@
           <form #registerForm="ngForm" (ngSubmit)="onSubmit(registerForm)" class="register">
             <div class="form-group-sm">
               <label class="small" for="names"><i class="fas fa-user-circle"></i> Nombres</label>
-              <input type="given-name" name="names" #names="ngModel" [(ngModel)]="user.names" class="form-control form-control-sm"
-                placeholder="Nombres (No incluyas tus apellidos)" required pattern="[A-Za-z ]{2,15}$">
+              <input type="given-name" name="names" #names="ngModel" [(ngModel)]="user.names"
+                class="form-control form-control-sm" placeholder="Nombres (No incluyas tus apellidos)" required
+                pattern="[A-Za-z ]{2,15}$">
               <small class="warning" *ngIf="!names.valid && names.touched">
                 ¡¡Este campo es obligatorio!!
               </small>
             </div>
             <div class="form-group-sm">
               <label class="small" for="unique_nick"><i class="fas fa-id-badge"></i> Nick de usuario</label>
-              <input type="username" name="unique_nick" #unique_nick="ngModel" [(ngModel)]="user.unique_nick" class="form-control form-control-sm"
-                placeholder="Nick de usuario" required pattern="[A-Za-z0-9_]{2,15}$">
+              <input type="username" name="unique_nick" #unique_nick="ngModel" [(ngModel)]="user.unique_nick"
+                class="form-control form-control-sm" placeholder="Nick de usuario" required
+                pattern="[A-Za-z0-9_]{2,15}$">
               <small class="warning" *ngIf="!unique_nick.valid && unique_nick.touched">
                 ¡¡Este campo es obligatorio!!
               </small>
             </div>
             <div class="form-group-sm">
               <label class="small" for="email"><i class="fas fa-at"></i> E-Mail</label>
-              <input type="email" name="email" #email="ngModel" [(ngModel)]="user.email" class="form-control form-control-sm"
-                placeholder="Email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+              <input type="email" name="email" #email="ngModel" [(ngModel)]="user.email"
+                class="form-control form-control-sm" placeholder="Email" required
+                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
               <small class="warning" *ngIf="!email.valid && email.touched">
                 ¡¡Este campo es obligatorio!!
               </small>
             </div>
             <div class="form-group-sm">
               <label class="small" for="role"><i class="fas fa-question-circle"></i> Eres:</label>
-              <select name="role" #role="ngModel" [(ngModel)]="user.role" class="form-control form-control-sm"
-                required>
+              <select name="role" #role="ngModel" [(ngModel)]="user.role" class="form-control form-control-sm" required>
                 <option value="student" selected="selected">Estudiante</option>
                 <option value="graduated">Egresado</option>
                 <option value="teacher">Profesor</option>
@@ -84,7 +86,8 @@
                 </select>
               </div>
               <div class="form-group-sm col" *ngIf="role.value  === 'student' || role.value  === 'graduated'">
-                <label class="small" for="career">Carrera<span *ngIf="role.value  === 'graduated'"> que estudiaste</span></label>
+                <label class="small" for="career">Carrera<span *ngIf="role.value  === 'graduated'"> que
+                    estudiaste</span></label>
                 <select name="career" #group="ngModel" [(ngModel)]="user.career" class="form-control form-control-sm"
                   required>
                   <option value="Administración de Recursos Humanos">Administración de Recursos Humanos</option>
@@ -101,22 +104,26 @@
             </div>
             <div class="form-group-sm">
               <label class="small" for="password"><i class="fas fa-user-secret"></i> Contraseña</label>
-              <input type="password" name="password" #password="ngModel" [(ngModel)]="user.password" class="form-control form-control-sm"
-                placeholder="Contraseña" required>
+              <input type="password" name="password" #password="ngModel" [(ngModel)]="user.password"
+                class="form-control form-control-sm" placeholder="Contraseña" required>
               <small class="warning" *ngIf="!password.valid && password.touched">
                 ¡¡Este campo es obligatorio!!
               </small>
             </div>
             <div class="form-row justify-content-md-center">
-              <button type="submit" class="btn btn-sm btn-dark" [disabled]="!registerForm.form.valid"><i class="fas fa-address-card"></i>
+              <button type="submit" class="btn btn-sm btn-dark" [disabled]="!registerForm.form.valid"><i
+                  class="fas fa-address-card"></i>
                 Registrarse
               </button>
             </div>
           </form>
         </div>
         <div class="card-footer">
-          <p class="card-text">¿Ya tienes una cuenta? <a class="link" href="/login"><i class="fas fa-sign-in-alt"></i>
-              Inicia sesión</a></p>
+          <p class="card-text">¿Ya tienes una cuenta?
+            <i class="link" (click)="login()">
+              <i class="fas fa-sign-in-alt"></i> Inicia sesión
+            </i>
+          </p>
         </div>
       </div>
     </div>
