--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -24,7 +24,7 @@
           <a class="nav-link" href="/classrooms"><i class="fas fa-chalkboard-teacher"></i> Aulas</a>
         </li>
       </ul>
-      <ul class="navbar-nav flex-row mt-2 mt-lg-0" style="line-height: 0;">
+      <ul class="navbar-nav flex-row ml-md-auto mt-2 mt-lg-0" style="line-height: 0;">
           <li *ngIf="!identity" class="nav-item">
             <a class="nav-link" href="/login"><i class="fas fa-sign-in-alt"></i> Inicia sesión</a>
           </li>
