--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -1,71 +1,77 @@
 $adagio-green: #20bf55;
 $adagio-gray: #282931;
 
-.menu{
-  color: #444;
-}
+.navbar {
 
-.logo {
-  height: 100%;
-  width: 30px;
-  margin-right: 0.5em;
-}
-
-.title {
-  font-size: 1.5rem;
-}
-
-.navbar-collapse {
-  line-height: 20px;
-}
-
-.navbar-nav {
-  padding-top: 0;
-  padding-bottom: 0;
-}
-
-.nav-link {
-  padding-right: 0;
-}
-
-.avatar {
-  line-height: 0;
-  border-radius: 10%;
-  height: 16px;
-  width: 16px;
-}
-
-.notif:hover {
-  cursor: pointer;
-}
-
-.notification-hf {
-  background: white;
-}
-
-.dropdown-menu {
-  position: relative;
-  border-radius: 0;
-  right: 0;
-  left: unset;
-  padding: 0;
-  .true {
-    background: none;
+  .menu {
+    color: #444;
   }
-  .false {
-    background: #c6c7ce;
+
+  .logo {
+    height: 100%;
+    width: 30px;
+    margin-right: 0.5em;
   }
-}
 
-.dropdown-item {
-  padding: 0.5vh;
-}
+  .title {
+    font-size: 1.5rem;
+  }
 
-.logout {
-  color: #923030;
+  .navbar-collapse {
+    line-height: 20px;
+  }
+
+  .navbar-nav {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  .nav-link {
+    padding-right: 0;
+  }
+
+  .avatar {
+    line-height: 0;
+    border-radius: 10%;
+    height: 16px;
+    width: 16px;
+  }
+
+  .notif:hover {
+    cursor: pointer;
+  }
+
+  .notification-hf {
+    background: white;
+  }
+
+  .dropdown-menu {
+    position: relative;
+    border-radius: 0;
+    right: 0;
+    left: unset;
+    padding: 0;
+
+    .true {
+      background: none;
+    }
+
+    .false {
+      background: #c6c7ce;
+    }
+  }
+
+  .dropdown-item {
+    padding: 0.5vh;
+  }
+
+  .logout {
+    color: #923030;
+  }
+
 }
 
 .components {
-  position: relative;
-  margin-top: 48px;
+  position: static;
+  margin-top: 52px;
 }
