--- a/client/src/app/components/publications.component.scss
+++ b/client/src/app/components/publications.component.scss
@@ -59,8 +59,8 @@ p {
     float: left;
     padding: 0.5em;
     border-radius: 10%;
-    height: 8vh;
-    width: 8vh;
+    height: 3.5em;
+    width: 3.5em;
   }
 
   .card-text {
@@ -86,7 +86,7 @@ p {
   }
 
   .publication-buttons {
-    padding: 1em;
+    padding: 0.5em;
 
     .btn {
       margin-right: 0.5em;
@@ -132,19 +132,32 @@ p {
 }
 
 .form-group {
-  margin: 0.5vh;
-  border: 1px solid #28293123;
+  display: inline;
+  margin: 0;
+  border: 0;
 
   textarea {
-    white-space: pre;
+    white-space: pre-wrap;
     resize: none;
     border: none;
   }
 
-  .btn,
-  button {
-    margin: 0.5vh;
-    border: none;
+  .btn {
+    border: 0;
+    padding: 0.2em;
+    margin: 0.3em;
+  }
+
+  .submit {
+    font-weight: bold;
+    color: $adagio-green;
+    &:hover {
+      color: $adagio-gray;
+    }
+  }
+
+  label{
+    margin: 0;
   }
 
   input[type="file"] {
@@ -152,7 +165,6 @@ p {
   }
 
   .custom-file-upload {
-    padding: 0;
     cursor: pointer;
   }
 
