--- a/client/src/app/components/publications/publications.component.html
+++ b/client/src/app/components/publications/publications.component.html
@@ -5,14 +5,14 @@
         <textarea name="text_field" #text_field="ngModel" [(ngModel)]="publication.text" class="form-control"
           name="text_field" rows="4"></textarea>
         <button type="submit" [disabled]="!publicationForm.form.valid"
-          class="btn-form btn adagio-gray">Publicar</button>
+          class="btn-form btn submit">Publicar</button>
         <label for="file-upload-media" class="custom-file-upload btn-form btn btn-file">
           <i class="fas fa-camera"></i><i *ngIf="publication.media_file" class="fas fa-check"></i>
         </label>
         <input name="media_file" #media_file="ngModel" [(ngModel)]="publication.media_file" id="file-upload-media"
           type="file" accept=".png, .jpg, .jpeg" />
         <label for="file-upload-document" class="custom-file-upload btn-form btn btn-file">
-          <i class="fas fa-file-pdf"></i><i *ngIf="publication.document_file" class="fas fa-check"></i>
+          <i class="fas fa-file-pdf"> </i><i *ngIf="publication.document_file" class="fas fa-check"></i>
         </label>
         <input name="document_field" #document_field="ngModel" [(ngModel)]="publication.document_file"
           id="file-upload-document" type="file" accept=".pdf, .docx, .doc" />
@@ -56,6 +56,7 @@
           Ver más publicaciones
         </button>
       </div>
+      <div infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="1000" (scrolled)="onScroll()"></div>
     </div>
   </div>
 </div>
