--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -30,7 +30,7 @@
                 ¡¡Este campo es obligatorio!!
               </small>
             </div>
-            <div class="form-row justify-content-md-center">
+            <div class="form-row">
               <button type="submit" class="btn btn-sm btn-dark" [disabled]="!loginForm.form.valid"><i
                   class="fas fa-sign-in-alt"></i>
                 Iniciar sesión</button>
