--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -74,7 +74,7 @@
     </div>
   </nav>
   <div class="components">
-    <div id="accordianId" role="tablist" aria-multiselectable="true">
+    <!--<div id="accordianId" role="tablist" aria-multiselectable="true">
       <div class="card">
         <div class="card-header" role="tab" id="section1HeaderId">
           <h5 class="mb-0">
@@ -94,7 +94,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div>-->
     <router-outlet></router-outlet>
   </div>
 </div>
